# dcdl-helper

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Makefile  README.md  USER_MANUAL.md  vcpkg-configuration.json  vcpkg.json
include/: Dictionary.hpp  LettersRound.hpp  NumbersRound.hpp  Utils.hpp
src/: Dictionary.cpp  LettersRound.cpp  NumbersRound.cpp  Utils.cpp  main.cpp
